vmm: block: thread pool prototype
