# src/vmm/src/resources.rs
@@ -1424,6 +1424,7 @@ mod tests {
             cpu_template: Some(StaticCpuTemplate::V1N1),
             track_dirty_pages: Some(false),
             huge_pages: Some(HugePageConfig::None),
+            pool_size: None,
             #[cfg(feature = "gdb")]
             gdb_socket_path: None,
         };
